整合Nacos注册中心

--- a/guli-ware/src/main/resources/application-dev.yml
+++ b/guli-ware/src/main/resources/application-dev.yml
@@ -107,6 +107,13 @@ spring:
                 max-active: 8
                 # #连接池最大阻塞等待时间（使用负值表示没有限制）
                 max-wait: -1
+    #spring:
+    cloud:
+        nacos:
+            discovery:
+                server-addr: 10.0.0.84:8848
+    application:
+        name: guli-ware
 #  logging:
 #    config: classpath:logback.xml
 
